modules/tests/_kubernetes-policy/fixtures/edge-identity/backend-isolation-wrong-selector/resources.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-idm-backend-ingress
  namespace: identity
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: identity
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gateway
      podSelector:
        matchLabels:
          gateway.envoyproxy.io/owning-gateway-name: household
          gateway.envoyproxy.io/owning-gateway-namespace: gateway
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
  - Ingress
